# python-supabase-api

./: .env.example  README.md  pyproject.toml
.idx/: dev.nix
app/: main.py
app/services/common/: tone_service.py
supabase/: config.toml
